# tar-conduit

./: .gitignore  .travis.yml  ChangeLog.md  appveyor.yaml  appveyor.yml  package.yaml  stack-ghc-9.2.8.yaml  stack-ghc-9.4.5.yaml  stack-ghc-9.4.8.yaml  stack-ghc-9.6.2.yaml  stack-ghc-9.6.3.yaml  stack-ghc-9.8.1.yaml  stack.yaml  tar-conduit.cabal
.github/workflows/: unit-tests.yml
sample/: checksums.hs
src/Data/Conduit/: Tar.hs
src/Data/Conduit/Tar/: Types.hs  Unix.hs  Windows.hs
tests/: Space.hs  Spec.hs  Time.hs
tests/files/: subdir.tar
tests/files-symlinks/: Привет.xhml
