name:                tar-conduit
version:             0.2.0
synopsis:            Parse tar files using conduit for streaming
description:         Please see README.md
homepage:            https://github.com/snoyberg/tar-conduit#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com, bartavelle@gmail.com
category:            Data Conduit
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Tar
  other-modules:       Data.Conduit.Tar.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit-combinators >= 1.0.8.1
                     , exceptions
                     , filepath
  default-language:    Haskell2010
  if os(windows)
      other-modules: Data.Conduit.Tar.Windows
      build-depends: directory >= 1.3.1.0
      cpp-options:   -DWINDOWS
  else
      other-modules: Data.Conduit.Tar.Unix
      build-depends: directory
                   , unix

-- test-suite tar-conduit-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hspec
--                      , tar-conduit
--                      , conduit-extra
--                      , conduit-combinators
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snoyberg/tar-conduit
